--- a/package.json
+++ b/package.json
@@ -1,5 +1,35 @@
 {
   "name": "birthday-countdown-app",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "homepage": "https://a7joka.github.io/birthday-countdown-app",
+  "dependencies": {
+    // ... rest of your dependencies
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
